Fix method to list tasks